# git-hooks-1c

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.cursor/rules/: python-environment-safety.mdc  testing-workflow.mdc  workspace-junctions.mdc
.cursor/skills/pdm-dev-workflow/: SKILL.md
.dev/: pyproject.toml
scripts/: install-pipx-editable.ps1
src/git_hooks_1c/: __about__.py  __main__.py  _version.py  pre_commit.py
tests/: test_pre_commit.py
