[build-system]
build-backend = "pdm.backend"
requires = ["pdm-backend"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

[project]
authors = [
    {name = "Cujoko", email = "cujoko@gmail.com"},
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: Russian",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development",
    "Topic :: Utilities",
]
dependencies = [
    "fleep>=1.0.1",
    "loguru>=0.6.0",
    "plumbum>=1.8.1",
]
description = "Git hooks utilities for 1C:Enterprise"
dynamic = ["version"]
keywords = ["1c", "git", "pre-commit", "v8reader", "v8unpack", "gcomp"]
license = {text = "MIT"}
name = "git-hooks-1c"
requires-python = ">=3.10"

[project.scripts]
gh1c = "git_hooks_1c.__main__:run"

[project.urls]
repository = "https://github.com/Cujoko-Dev/git-hooks-1c"

[tool.pdm.build]
package-dir = "../src"

[tool.pdm.dev-dependencies]
dev = [
    "-e file:///${PROJECT_ROOT}/../../commons#egg=cjk-commons",
    "-e file:///${PROJECT_ROOT}/../../parse-1c-build#egg=parse-1c-build",
    
    # Пакеты B
    "-e file:///${PROJECT_ROOT}/../../commons-1c#egg=commons-1c",
]

[tool.pdm.scripts]
test = { cmd = "pytest", working_dir = ".." }

[tool.pdm.version]
path = "../src/git_hooks_1c/_version.py"
pattern = '^__version__\s*=\s*"([^"]+)"'
source = "file"
